dev_ws/log/build_2023-12-15_15-33-50/depth_viewer/stderr.log
  File "/home/hammad/Desktop/mobile-robotics-crash-course/2-perception/dev_ws/install/depth_viewer/lib/python3.8/site-packages/depth_viewer/import torch.py", line 144
    cone_depth = ConeDepth[]
                           ^
SyntaxError: invalid syntax

